--- a/frontend/src/partials/_variables.scss
+++ b/frontend/src/partials/_variables.scss
@@ -12,6 +12,7 @@ $fs-h3: 1.25rem;
 $fs-body: 1rem;
 $border : 10px;
 $sect-gap: 3rem;
+$side-margin: 2rem;
 
 // // Breakpoints
 $breakpoint-tablet: 768px;
